# camel-hot

./: .gitignore  CROSS_PLATFORM.md  DELIVERY_SUMMARY.md  DJ_MIXING_GUIDE.md  DOCUMENTATION_CONSOLIDATION.md  ENHANCEMENT_SUMMARY.md  FEATURE_CHECKLIST.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES_GUIDE.md  QUICK_REFERENCE.txt  QUICK_START_ENGINE.md  README.md  README_TRANSITION_ENGINE.md  REFACTORING_SUMMARY.md  TODO.md  TRANSITION_ENGINE_GUIDE.md  config.py  logging_config.py  main.py  pyproject.toml  requirements.txt  test_setup.py  test_transition_engine.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
_archived_docs/: README.md
audio_analysis/: energy_detection.py  groove_analysis.py  key_detection.py  mood_classification.py
docs/: ARCHITECTURE.md  CAMELOT_SYSTEM.md  CONFIGURATION.md  CONTRIBUTING.md
gui/: __init__.py  main_window.py
gui/file_manager/: __init__.py  organizer.py
tests/: conftest.py
tests/unit/: test_camelot_map.py  test_config.py  test_organizer.py  test_transition_scoring.py
utils/: camelot_map.py  camelot_wheel_generator.py  dj_tips.py  transition_scoring.py  translations.py
